Добавляет соответствие критерию Д14 (интерактивная карта без JS)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,8 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="62">
           <source media="(min-width: 768px)" srcset="img/logo/logotype.svg" width="174" height="52">
-          <img class="main-header__logo-icon" src="img/logo/logotype-mobile.svg" width="190" height="38" alt="Логотип CAT ENERGI.">
+          <img class="main-header__logo-icon" src="img/logo/logotype-mobile.svg" width="190" height="38"
+            alt="Логотип CAT ENERGI.">
         </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
@@ -52,11 +53,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.webp, img/catalog/chicken-500-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.webp, img/catalog/chicken-500-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/chicken-500-mobile.webp, img/catalog/chicken-500-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/chicken-500-desktop.webp, img/catalog/chicken-500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/chicken-500-tablet.webp, img/catalog/chicken-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/chicken-500-mobile.webp, img/catalog/chicken-500-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/chicken-500-desktop.png 1x, img/catalog/chicken-500-desktop@2x.png 2x">
+                  srcset="img/catalog/chicken-500-desktop.png 1x, img/catalog/chicken-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-500-tablet.png 1x, img/catalog/chicken-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-500-mobile.png"
@@ -93,11 +97,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.webp, img/catalog/chicken-1000-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.webp, img/catalog/chicken-1000-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/chicken-1000-mobile.webp, img/catalog/chicken-1000-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/chicken-1000-desktop.webp, img/catalog/chicken-1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/chicken-1000-tablet.webp, img/catalog/chicken-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/chicken-1000-mobile.webp, img/catalog/chicken-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/chicken-1000-desktop.png 1x, img/catalog/chicken-1000-desktop@2x.png 2x">
+                  srcset="img/catalog/chicken-1000-desktop.png 1x, img/catalog/chicken-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-1000-tablet.png 1x, img/catalog/chicken-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-1000-mobile.png"
@@ -134,11 +141,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.webp, img/catalog/fish-500-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.webp, img/catalog/fish-500-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/fish-500-mobile.webp, img/catalog/fish-500-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/fish-500-desktop.webp, img/catalog/fish-500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/fish-500-tablet.webp, img/catalog/fish-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/fish-500-mobile.webp, img/catalog/fish-500-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/fish-500-desktop.png 1x, img/catalog/fish-500-desktop@2x.png 2x">
+                  srcset="img/catalog/fish-500-desktop.png 1x, img/catalog/fish-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-500-tablet.png 1x, img/catalog/fish-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-500-mobile.png"
@@ -175,11 +185,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.webp, img/catalog/fish-1000-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.webp, img/catalog/fish-1000-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/fish-1000-mobile.webp, img/catalog/fish-1000-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/fish-1000-desktop.webp, img/catalog/fish-1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/fish-1000-tablet.webp, img/catalog/fish-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/fish-1000-mobile.webp, img/catalog/fish-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/fish-1000-desktop.png 1x, img/catalog/fish-1000-desktop@2x.png 2x">
+                  srcset="img/catalog/fish-1000-desktop.png 1x, img/catalog/fish-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-1000-tablet.png 1x, img/catalog/fish-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-1000-mobile.png"
@@ -216,11 +229,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.webp, img/catalog/buckwheat-500-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.webp, img/catalog/buckwheat-500-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/buckwheat-500-mobile.webp, img/catalog/buckwheat-500-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/buckwheat-500-desktop.webp, img/catalog/buckwheat-500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat-500-tablet.webp, img/catalog/buckwheat-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/buckwheat-500-mobile.webp, img/catalog/buckwheat-500-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/buckwheat-500-desktop.png 1x, img/catalog/buckwheat-500-desktop@2x.png 2x">
+                  srcset="img/catalog/buckwheat-500-desktop.png 1x, img/catalog/buckwheat-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-500-tablet.png 1x, img/catalog/buckwheat-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-500-mobile.png"
@@ -257,11 +273,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.webp, img/catalog/buckwheat-1000-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.webp, img/catalog/buckwheat-1000-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/buckwheat-1000-mobile.webp, img/catalog/buckwheat-1000-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/buckwheat-1000-desktop.webp, img/catalog/buckwheat-1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat-1000-tablet.webp, img/catalog/buckwheat-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/buckwheat-1000-mobile.webp, img/catalog/buckwheat-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/buckwheat-1000-desktop.png 1x, img/catalog/buckwheat-1000-desktop@2x.png 2x">
+                  srcset="img/catalog/buckwheat-1000-desktop.png 1x, img/catalog/buckwheat-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-1000-tablet.png 1x, img/catalog/buckwheat-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-1000-mobile.png"
@@ -298,11 +317,14 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.webp, img/catalog/rice-500-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.webp, img/catalog/rice-500-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/rice-500-mobile.webp, img/catalog/rice-500-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/catalog/rice-500-desktop.webp, img/catalog/rice-500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/rice-500-tablet.webp, img/catalog/rice-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/rice-500-mobile.webp, img/catalog/rice-500-mobile@2x.webp 2x">
                 <source media="(min-width: 1440px)"
-                srcset="img/catalog/rice-500-desktop.png 1x, img/catalog/rice-500-desktop@2x.png 2x">
+                  srcset="img/catalog/rice-500-desktop.png 1x, img/catalog/rice-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/rice-500-tablet.png 1x, img/catalog/rice-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/rice-500-mobile.png"
@@ -426,6 +448,22 @@
         <iframe class="invite-cooperation__google-map" title="CAT ENERGI на карте" loading="lazy"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9191.016012052718!2d30.31261095329799!3d59.93706571329095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sth!4v1682501822185!5m2!1sru!2sth">
         </iframe>
+        <noscript>
+          <picture>
+            <source media="(min-width: 1440px)" type="image/webp" width="1440" height="400"
+              srcset="img/map/map-desktop.webp, img/map/map-desktop@2x.webp 2x">
+            <source media="(min-width: 768px)" type="image/webp" width="768" height="400"
+              srcset="img/map/map-tablet.webp, img/map/map-tablet@2x.webp 2x">
+            <source type="image/webp" width="320" height="362"
+              srcset="img/map/map-mobile.webp, img/map/map-mobile@2x.webp 2x">
+            <source media="(min-width: 1440px)" width="1440" height="400"
+              srcset="img/map/map-desktop.png, img/map/map-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" width="768" height="400"
+              srcset="img/map/map-tablet.png, img/map/map-tablet@2x.png 2x">
+            <img class="invite-cooperation__map-no-js" width="320" height="362" src="img/map/map-mobile.png"
+              srcset="img/map/map-mobile@2x.png 2x" alt="CAT ENERGI на карте.">
+          </picture>
+        </noscript>
       </div>
     </section>
   </main>
